--- a/deploy-webapp.yml
+++ b/deploy-webapp.yml
@@ -1,12 +1,12 @@
 ---
 
-  - name: Reserve ec2 instances in aws cloud
+  - name: Reserve ec2 instances
     hosts: localhost
     connection: local
     gather_facts: False
     vars_files:
-    - group_vars/global_aws.yml
+    - group_vars/all.yml
     roles:
       - { role: sec_group }
-      - { role: ec2, ec2_inst_name: Server1 }
-      - { role: ec2, ec2_inst_name: Server2 }
+      - { role: create_ec2_ins, ec2_inst_name: Server1 }
+      - { role: create_ec2_ins, ec2_inst_name: Server2 }
