--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -3,7 +3,7 @@
 
 ec2_access_key:
 ec2_secret_key:
-ec2_region: us-east-1
+region_name: us-east-1
 ec2_image_id: ami-188d6e0e
 ec2_instance_type: t2.micro
 ec2_instance_count: 1
@@ -11,3 +11,4 @@ ec2_vol_type: gp2
 ec2_vol_size: 30
 ec2_group: my-sec-grp
 ec2_inst_name:
+stack_name: "StaticSiteStack"
